--- a/index.html
+++ b/index.html
@@ -129,9 +129,13 @@
                 <a href="#events" class="btn btn-danger btn-lg">
                   <i class="fa fa-sign-in"></i>&nbsp&nbsp Event Registration
                 </a>
-                &nbsp &nbsp
+                
                 <a href="#contactus" class="btn btn-danger btn-lg">
                   <i class="fa fa-inr"></i>&nbsp&nbsp Become a Sponsor 
+                </a>
+                <br>
+                <a href="./assets/download/Purvodaya Brochure 2020.pdf" target="_blank" class="btn btn-danger btn-lg">
+                  <i class="fa fa-download"></i>&nbsp Download Brochure 
                 </a>
               </div>
               <div class="col-md-5 ml-auto">
@@ -728,23 +732,25 @@
                   <div class="carousel-item active">
                     <div class="card card-plain card-testimonial">
                       <div class="card-header card-header-image">
-                        <img class="img img-raised" src="./assets/img/gallery/00001.jpg">
+                        <img class="img img-raised" src="./assets/img/gallery/00002.jpg">
                       </div>
                 <!-- <div class="card-body">
                   <h5 class="card-description">Image description 1</h5>     
                 </div> -->
                     </div>
                   </div>
+                  <!--
                   <div class="carousel-item">
                     <div class="card card-testimonial card-plain">
                       <div class="card-header card-header-image">
                         <img class="img img-raised" src="./assets/img/gallery/00002.jpg">
                     </div>
-                    <!-- <div class="card-body">
+                     <div class="card-body">
                       <h5 class="card-description">Image description 2</h5>     
-                    </div> -->
+                    </div> 
                       </div>
                   </div>
+              -->
                   <div class="carousel-item">
                     <div class="card card-testimonial card-plain">
                       <div class="card-header card-header-image">
