highlighted few texts in stats tab

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                   <i class="fa fa-users"></i>
                 </div>
                 <h4 class="info-title">3000+</h4>
-                <p><strong> Purvodaya'19</strong> saw a footfall of over 3000 students from across the country </p>
+                <p><b> Purvodaya'19</b> saw a footfall of over 3000 students from across the country </p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -219,7 +219,7 @@
                   <i class="fa fa-inr"></i>
                 </div>
                 <h4 class="info-title">10+ Lakhs</h4>
-                <p>Over <strong>10 lakhs</strong> worth prizes to be won</p>
+                <p>Over <b>10 lakhs</b> worth prizes to be won</p>
               </div>
             </div>
           </div>
@@ -248,7 +248,7 @@
                    <i class="fa fa-signal"></i>
                 </div>
                 <h4 class="info-title">30+</h4>
-                <p><strong>Purvodaya'19</strong> saw over 30 sponsors</p>
+                <p><b>Purvodaya'19</b> saw over 30 sponsors</p>
               </div>
             </div>
           </div>
