updated linkedin profile of teja

--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
                 </div>
                 <div class="card-footer justify-content-center">
                   <a href="https://www.facebook.com/tejareddy.g.7" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-                  <a href="linkedin.com/in/teja-gajulapalli-340aa388" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/teja-gajulapalli-340aa388" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 				</div>
               </div>
             </div>
