--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@
       
     <div class="cd-section" id="contactus">
       <!--     *********    CONTACT US 1     *********      -->
-      <div class="contactus-1 section-image" style="background-image: url('./assets/img/examples/city.jpg')">
+      <div class="contactus-1 section-image" style="padding-bottom: 0; background-image: url('./assets/img/examples/city.jpg')">
         <div class="container">
           <div class="row">
             <div class="col-md-5">
@@ -1569,9 +1569,13 @@
             </div>
           </div>
         </div>
+        <footer>
+          <div class="description" style="margin: 0 auto; color:white; text-shadow: 0 0 5px #abc,0 0 10px#abc; font-weight: bolder;">
+            © Made with <i class="fa fa-heart heart-icon"></i> by Tech Club | VGSoM IIT Kharagpur
+          </div>
+        </footer>
       </div>
       <!--     *********    END CONTACT US 1      *********      -->
-      
     </div>
   </div>
   <!--   Core JS Files   -->
