--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Saini Das</h4>
-                  <h6 class="card-category text-muted">Assitant Professor</h6>
+                  <h6 class="card-category text-muted">Assistant Professor</h6>
                 </div>
                 <div class="card-footer justify-content-center">
                   <a href="https://www.facebook.com/saini.das.731" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -971,7 +971,7 @@
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Tutan Ahmed</h4>
-                  <h6 class="card-category text-muted">Assitant Professor</h6>
+                  <h6 class="card-category text-muted">Assistant Professor</h6>
                 </div>
                 <div class="card-footer justify-content-center">
                   <a href="https://www.facebook.com/tutan.ahmed" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -986,7 +986,7 @@
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">S Srinivasan</h4>
-                  <h6 class="card-category text-muted">Assitant Professor</h6>
+                  <h6 class="card-category text-muted">Assistant Professor</h6>
                   </div>
                 <div class="card-footer justify-content-center">
                   <a href="https://www.linkedin.com/in/srinivasan-s-33893558/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
