--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <h4>Vinod Gupta School of Management, IIT Kharagpur's</h4>                
+                <h4><a href="https://som.iitkgp.ac.in" style="color: white" target="_blank">Vinod Gupta School of Management, IIT Kharagpur's</a></h4>                
                 <h1 class="title">
                 Purvodaya '20</h1>
                 <h3>	
