reduced events poster size even further, added tracker, added prefix prof.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156085361-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-156085361-2');
+  </script>
+
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/purvodaya-logo.png">
   <link rel="icon" type="image/png" href="./assets/img/purvodaya-logo.png">
@@ -24,6 +34,8 @@
     Purvodaya'20 | VGSoM, IIT Kharagpur
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+   <meta name="description" content="Purvodaya is the annual business fest of vinod gupta school of management, IIT Kharagpur. It is an amalgamation of events spread across all the domains of business and management. "/>  
+  <meta name="keywords" content="VGSOM, IIT Kharagpur, business fest, mangement fest, management competitions, competitions, consulting, finance, marketing, CSR "/>  
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
@@ -358,7 +370,7 @@
                   </div>
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
-                      <img class="img img-raised" src="./assets/img/events/Ecell_SrijanN.JPG">
+                      <img class="img img-raised" src="./assets/img/events/Ecell_SrijanN-min.JPG">
                     </div>
                   </div>
                 </div>
@@ -367,12 +379,12 @@
                 <div class="row">
                 	                  <div class="col-md-5">
                     <div class="card-header card-header-image">
-                      <img class="img img-raised" src="./assets/img/events/ECell_Vichaar.png">
+                      <img class="img img-raised" src="./assets/img/events/ECell_Vichaar-min.png">
                     </div>
                   </div>
                   <div class="col-md-7">
                      <h3 class="card-title">
-                      <a href="#pablo">Vichar</a>
+                      <a href="#pablo">Vichaar</a>
                     </h3>
                      <h6 class="card-category text-info">Entrepreneurship Cell</h6>
                     <p class="card-description" align="justify">
@@ -404,7 +416,7 @@
                       </div>
                       <div class="col-md-5">
                         <div class="card-header card-header-image">
-                          <img class="img img-raised" src="./assets/img/events/ScOpe_ModusOperandi_PosterN.jpg">
+                          <img class="img img-raised" src="./assets/img/events/ScOpe_ModusOperandi_PosterN-min.jpg">
                         </div>
                       </div>
                     </div>
@@ -428,7 +440,7 @@
                      <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" src="./assets/img/events/DC_Synergy.jpg">
+                        <img class="img" src="./assets/img/events/DC_Synergy-min.jpg">
                       </a>
                     </div>
                   </div>
@@ -439,7 +451,7 @@
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" src="./assets/img/events/Finterest_Mulyankan.png">
+                        <img class="img" src="./assets/img/events/Finterest_Mulyankan-min.png">
                       </a>
                     </div>
                   </div>
@@ -477,7 +489,7 @@
                                     <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" src="./assets/img/events/TCC_Sumantran.jpg">
+                        <img class="img" src="./assets/img/events/TCC_Sumantran-min.jpg">
                       </a>
                     </div>
                   </div>
@@ -489,7 +501,7 @@
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" src="./assets/img/events/TheConsultingClub_Guesstimates.png">
+                        <img class="img" src="./assets/img/events/TheConsultingClub_Guesstimates-min.png">
                       </a>
                     </div>
                   </div>
@@ -525,7 +537,7 @@
                   </div>
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
-                      <img class="img img-raised" src="./assets/img/events/MAD_Leader_s Challenge.jpeg">
+                      <img class="img img-raised" src="./assets/img/events/MAD_Leader_s Challenge-min.jpeg">
                     </div>
                   </div>
                 </div>
@@ -535,7 +547,7 @@
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" src="./assets/img/events/MAD_Thinkvent.jpg">
+                        <img class="img" src="./assets/img/events/MAD_Thinkvent-min.jpg">
                       </a>
                     </div>
                   </div>
@@ -577,7 +589,7 @@
                   </div>
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
-                      <img class="img img-raised" src="./assets/img/events/Saamanjasya_Parishram.png">
+                      <img class="img img-raised" src="./assets/img/events/Saamanjasya_Parishram-min.png">
                     </div>
                   </div>
                 </div>
@@ -586,7 +598,7 @@
                 <div class="row">
                                     <div class="col-md-5">
                     <div class="card-header card-header-image">
-                      <img class="img img-raised" src="./assets/img/events/Saamanjasya_Aalekh.png">
+                      <img class="img img-raised" src="./assets/img/events/Saamanjasya_Aalekh-min.png">
                     </div>
                   </div>
                   <div class="col-md-7">
@@ -625,7 +637,7 @@
                                     <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" style="height:270px" src="./assets/img/events/A Day at IIT Kharagpur.jpg">
+                        <img class="img" style="height:270px" src="./assets/img/events/A Day at IIT Kharagpur-min.jpg">
                       </a>
                     </div>
                   </div>
@@ -636,7 +648,7 @@
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" src="./assets/img/events/Quiz_Quizzard.jpg">
+                        <img class="img" src="./assets/img/events/Quiz_Quizzard-min.jpg">
                       </a>
                     </div>
                   </div>
@@ -672,7 +684,7 @@
                   </div>
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
-                      <img class="img img-raised" style="height:270px" src="./assets/img/events/Flash_Destello.jpg">
+                      <img class="img img-raised" style="height:270px" src="./assets/img/events/Flash_Destello-min.jpg">
                     </div>
                   </div>
                 </div>
@@ -682,7 +694,7 @@
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#events">
-                        <img class="img" src="./assets/img/events/Flash_Lights!Camera!Freeze!.jpg">
+                        <img class="img" src="./assets/img/events/Flash_Lights!Camera!Freeze!-min.jpg">
                       </a>
                     </div>
                   </div>
@@ -940,7 +952,7 @@
                     <img class="img" src="./assets/img/faculties/prabina.jpg" />
                   </div>
                 <div class="card-body ">
-                  <h4 class="card-title">Prabina Rajib</h4>
+                  <h4 class="card-title">Prof. Prabina Rajib</h4>
                   <h6 class="card-category text-muted">Dean & Professor</h6>
                 </div>
                 <div class="card-footer justify-content-center">
@@ -955,7 +967,7 @@
                     <img class="img" src="./assets/img/faculties/saini.jpg" />
                   </div>
                 <div class="card-body ">
-                  <h4 class="card-title">Saini Das</h4>
+                  <h4 class="card-title">Prof. Saini Das</h4>
                   <h6 class="card-category text-muted">Assistant Professor</h6>
                 </div>
                 <div class="card-footer justify-content-center">
@@ -970,7 +982,7 @@
                     <img class="img" src="./assets/img/faculties/tutan.jpg" />
                   </div>
                 <div class="card-body ">
-                  <h4 class="card-title">Tutan Ahmed</h4>
+                  <h4 class="card-title">Prof. Tutan Ahmed</h4>
                   <h6 class="card-category text-muted">Assistant Professor</h6>
                 </div>
                 <div class="card-footer justify-content-center">
@@ -985,7 +997,7 @@
                     <img class="img" src="./assets/img/faculties/srinivas.jpg" />
                   </div>
                 <div class="card-body ">
-                  <h4 class="card-title">S Srinivasan</h4>
+                  <h4 class="card-title">Prof. S Srinivasan</h4>
                   <h6 class="card-category text-muted">Assistant Professor</h6>
                   </div>
                 <div class="card-footer justify-content-center">
