--- a/index.html
+++ b/index.html
@@ -129,8 +129,13 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <h4><a href="https://som.iitkgp.ac.in" style="color: white" target="_blank">Vinod Gupta School of Management, IIT Kharagpur's</a></h4>                
-                <h1 class="title">
+                <h4 style="font-family:pristina;">
+                	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo3.png">
+                	 Presents
+                	<br>
+                	<a href="https://som.iitkgp.ac.in" style="font-family:verdana;color: white" target="_blank">Vinod Gupta School of Management, IIT Kharagpur's</a>
+                </h4>                
+                <h1 class="title" style="font-family:pristina;">
                 Purvodaya '20</h1>
                 <h3>	
 					<strong><span id="days"></span></strong><small>Days </small> 
