--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="icon" type="image/png" href="./assets/img/purvodaya-logo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Purvodaya'20 | VGSoM, IIT Kharagpur
+    IOCL presents Purvodaya'20 | VGSoM, IIT Kharagpur
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
    <meta name="description" content="Purvodaya is the annual business fest of vinod gupta school of management, IIT Kharagpur. It is an amalgamation of events spread across all the domains of business and management. "/>  
@@ -125,18 +125,21 @@
             </div>
           </div>
         </nav>
-        <div class="page-header header-filter" id="home" style="background-image: url('./assets/img/purvodaya/vgsom-diwali.jpg');">
+        <div class="page-header header-filter" id="home" style="background-image: url('./assets/img/purvodaya/vgsom-diwali4.png');">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
+              	<img width=auto height=200px type="image/png" src="./assets/img/purvodaya/MastHead-Writing_Title5.png"> 
+            <!--
                 <h4 style="font-family:pristina;">
-                	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo3.png">
+                	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
                 	 Presents
                 	<br>
                 	<a href="https://som.iitkgp.ac.in" style="font-family:verdana;color: white" target="_blank">Vinod Gupta School of Management, IIT Kharagpur's</a>
                 </h4>                
                 <h1 class="title" style="font-family:pristina;">
                 Purvodaya '20</h1>
+            -->
                 <h3>	
 					<strong><span id="days"></span></strong><small>Days </small> 
 					<strong><span id="hours"></span></strong><small>Hours </small> 
@@ -227,7 +230,7 @@
                   <i class="fa fa-users"></i>
                 </div>
                 <h4 class="info-title">3000+</h4>
-                <p><b> Purvodaya '19</b> saw a footfall of over 3000 students from across the country </p>
+                <p><b> Purvodaya '19</b> saw registrations of over 3000 students from across the country </p>
               </div>
             </div>
             <div class="col-sm-4">
