removed petronas from sponsors

--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
               <a target="_blank" href="https://eattributes.com/">
               <div class="card card-profile">
                   <div >
@@ -1154,7 +1154,7 @@
               </div>
             </a>
             </div>
-             <div class="col-md-3">
+             <div class="col-md-4">
             <a target="_blank" href="https://www.pnbindia.in/">
             <div class="card card-profile">
                   <div >
@@ -1166,18 +1166,19 @@
               </div>
             </a>
             </div>
-              <div class="col-md-3">
+              <div class="col-md-4">
              <a target="_blank" href="https://www.arthfc.com/">
              <div class="card card-profile">
                   <div >
                     <br><img class="img" height=40px width=auto type="image/png" src="./assets/img/Sponsors/ART.jpg" />
                   </div>
                 <div class="card-body ">
-                  <h6 class="card-title">ART Housing Finance (India) Limited</h6>
+                  <h6 class="card-title">ART Housing Finance (India) Limited<br><br></h6>
                 </div>
               </div>
             </a>
             </div>
+            <!--
          <div class="col-md-3">
               <a target="_blank" href="https://www.pli-petronas.com/en-in">
             <div class="card card-profile">
@@ -1190,6 +1191,7 @@
               </div>
             </a>
             </div>
+        -->
           </div>
               </div>
             </div>
