updated home page images

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
             </div>
           </div>
         </nav>
-        <div class="page-header header-filter" id="home" style="background-image: url('./assets/img/purvodaya/vgsom-diwali4.png');">
+        <div class="page-header header-filter" id="home" style="background-image: url('./assets/img/purvodaya/vgsom-diwali.jpg');">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-              	<img width=auto height=200px type="image/png" src="./assets/img/purvodaya/MastHead-Writing_Title5.png"> 
+              	<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/MastHead-with-glow.png"> 
             <!--
                 <h4 style="font-family:pristina;">
                 	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
