--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					<strong><span id="seconds"></span></strong><small>Seconds to go...</small>
 				</h3>
 			-->
-                <p align="justify">Purvodaya is an amalgamation of events spread across all the domains of business and management. Spread across 3 days, it provides an ideal platform for the budding managers and innovators of today to hone their skills and test their mettle against their peers. The event hosts a complete business extravaganzaaa.</p>
+                <p align="justify">Purvodaya is an amalgamation of events spread across all the domains of business and management. Spread across 3 days, it provides an ideal platform for the budding managers and innovators of today to hone their skills and test their mettle against their peers. The event hosts a complete business extravaganza.</p>
             </div>
                 
               <div class="col-md-5 ml-auto">
