--- a/index.html
+++ b/index.html
@@ -200,9 +200,13 @@
           </div>
             <div class="row">
             <div class="col-md-11 ml-auto mr-auto text-center">
-              <h4 class="title">Purvodaya 2020 – THINK THE UNTHINKABLE</h4>
+              <h4 class="title">Purvodaya 2021 – EXCELLENCE THROUGH RESILIENCE</h4>
               <p align="justify">
-              	In today's dynamic era, we must learn to explore all the options and possibilities that confront us in a complex and rapidly changing world. The need of the hour is to welcome these changes, understand them and score a win over them. Purvodaya has taken it upon itself to let the world ponder about the same and forced everyone to mind-boggle with its theme- Think the Unthinkable. With Industry 4.0 on the horizon, the modern world is full of opportunities and those offering solutions will be spearheading the future. Purvodaya, the annual B-School fest of VGSoM, IIT Kharagpur coalesces young business minds from B schools across India creating a platform for them to showcase their knowledge and business skills and compete with the best in the nation. It is an extravaganza spread over three days, offering a plethora of events to test the knowledge of budding managers across multiple domains of business management. Attended by a myriad of industrial stalwarts, eminent speakers and the best minds in the country it offers a platform for everyone to share their insights on a range of topics. Purvodaya is where ideas get sparked, innovations thrive, and creativity blooms and the entire Bschool fraternity is waiting to indulge themselves in Purvodaya 2020.
+              	<b>“If you can’t fly then run, if you can’t run then walk, if you can’t walk then crawl, but whatever you do you have to keep moving forward.” – Martin Luther King Jr</b><br>
+				Dating back to Robert Bruce and spider's story to modern-day, Arunima Sinha climbing Mount Everest beating all odds, one thing that lies common in their success stories is that they all failed in their respective endeavours only to bounce back with even more zeal to win. Would we have ever gone to the moon if we gave up?<br> 
+				Purvodaya, the annual B-School fest of VGSoM, IIT Kharagpur, is an epic saga of perseverance where competitions will provide a platform to test out the budding manager's adaptability, flexibility, and robustness. The prodigious mix of events spanning across contemporary business problems from a diverse spectrum of industries challenges the finest B School students of our country to show the world that with resilience, we can beat the odds and rise above the ashes.<br>
+				The essence of Purvodaya has always been about drawing lessons from defeat, rather than boasting about our victories. We strive to continue the magic and the ethos that has made past editions events to remember, by making sure that Purvodaya is where ideas get sparked, innovations thrive, and creativity blooms.
+
               </p>      
             </div>
           </div>
