--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
             <div class="row">
             <div class="col-md-11 ml-auto mr-auto text-center">
               <h4 class="title">Purvodaya 2021 – EXCELLENCE THROUGH RESILIENCE</h4>
-              <p align="justify">
-              	<b>“If you can’t fly then run, if you can’t run then walk, if you can’t walk then crawl, but whatever you do you have to keep moving forward.” <br>– Martin Luther King Jr</b><br><br>
-				Dating back to Robert Bruce and spider's story to modern-day, Arunima Sinha climbing Mount Everest beating all odds, one thing that lies common in their success stories is that they all failed in their respective endeavours only to bounce back with even more zeal to win. Would we have ever gone to the moon if we gave up?<br> 
+              <p align="center">
+              	<b>“If you can’t fly then run, if you can’t run then walk, if you can’t walk then crawl, but whatever you do you have to keep moving forward.” </p>
+              		<p align="right">- Martin Luther King Jr</b></p>
+				<p align="justify">Dating back to Robert Bruce and spider's story to modern-day, Arunima Sinha climbing Mount Everest beating all odds, one thing that lies common in their success stories is that they all failed in their respective endeavours only to bounce back with even more zeal to win. Would we have ever gone to the moon if we gave up?<br> 
 				Purvodaya, the annual B-School fest of VGSoM, IIT Kharagpur, is an epic saga of perseverance where competitions will provide a platform to test out the budding manager's adaptability, flexibility, and robustness. The prodigious mix of events spanning across contemporary business problems from a diverse spectrum of industries challenges the finest B School students of our country to show the world that with resilience, we can beat the odds and rise above the ashes.<br>
 				The essence of Purvodaya has always been about drawing lessons from defeat, rather than boasting about our victories. We strive to continue the magic and the ethos that has made past editions events to remember, by making sure that Purvodaya is where ideas get sparked, innovations thrive, and creativity blooms.
 
