--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="icon" type="image/png" href="./assets/img/purvodaya-logo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    IOCL presents Purvodaya'20 | VGSoM, IIT Kharagpur
+    IOCL presents Purvodaya'21 | VGSoM, IIT Kharagpur
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
    <meta name="description" content="Purvodaya is the annual business fest of vinod gupta school of management, IIT Kharagpur. It is an amalgamation of events spread across all the domains of business and management. "/>  
@@ -230,8 +230,8 @@
                 <div class="icon">
                   <i class="fa fa-trophy"></i>
                 </div>
-                <h4 class="info-title">12+</h4>
-                <p>More than 12 events spread through 3 days</p>
+                <h4 class="info-title">18+</h4>
+                <p>More than 18 events spread over 3 days</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -239,8 +239,8 @@
                 <div class="icon">
                   <i class="fa fa-users"></i>
                 </div>
-                <h4 class="info-title">3000+</h4>
-                <p><b> Purvodaya '19</b> saw registrations of over 3000 students from across the country </p>
+                <h4 class="info-title">4500+</h4>
+                <p><b> Purvodaya '20</b> saw a staggering number of registrations of over 4500 students from across the country  </p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -257,10 +257,12 @@
             <div class="col-sm-4">
               <div class="info">
                 <div class="icon">
-                  <i class="fa fa-facebook"></i>
+                  <i class="fa fa-facebook"></i> &ensp;
+                  <i class="fa fa-instagram"></i> &ensp;
+                  <i class="fa fa-linkedin"></i>
                 </div>
-                <h4 class="info-title">8000+</h4>
-                <p>Over 8000 followers on facebook</p>
+                <h4 class="info-title">10000+</h4>
+                <p>Over 10000 followers on Social Media Platforms</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -268,8 +270,8 @@
                 <div class="icon">
                   <i class="fa fa-graduation-cap"></i>
                 </div>
-                <h4 class="info-title">250+</h4>
-                <p>Over 250 participating colleges spread across the country</p>
+                <h4 class="info-title">330+</h4>
+                <p>Over 330 participating colleges spread across the country</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -278,7 +280,7 @@
                    <i class="fa fa-signal"></i>
                 </div>
                 <h4 class="info-title">30+</h4>
-                <p><b>Purvodaya '19</b> saw over 30 sponsors</p>
+                <p><b>Purvodaya '20</b> saw over 30 sponsors</p>
               </div>
             </div>
           </div>
