--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="icon" type="image/png" href="./assets/img/purvodaya-logo.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>
-		IOCL presents Purvodaya'21 | VGSoM, IIT Kharagpur
+		Purvodaya'21 | VGSoM, IIT Kharagpur
 	</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 	<meta name="description" content="Purvodaya is the annual business fest of vinod gupta school of management, IIT Kharagpur. It is an amalgamation of events spread across all the domains of business and management. "/>  
@@ -129,7 +129,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/MastHead-with-glow.png"> 
+								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/purvodaya-21-masthead-white.png"> 
             <!--
                 <h4 style="font-family:pristina;">
                 	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
@@ -1838,7 +1838,7 @@
 							<img class="img" src="./assets/img/Team/2020/Ritarshi Chakraborty.JPG" />
 						</div>
 						<div class="card-body ">
-							<h4 class="card-title">Ritarshi Chakraborty</h4>
+							<h4 class="card-title">Ritarshi</h4>
 						</div>
 						<div class="card-footer justify-content-center">
 							<a href="https://www.facebook.com/ritarshi.chakraborty.56/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -1947,7 +1947,7 @@
 						<img class="img" src="./assets/img/Team/2020/Date Mayur Narayan.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Date Mayur Narayan</h4>
+						<h4 class="card-title">Mayur Date</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/mayur.date.7/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -1977,7 +1977,7 @@
 						<img class="img" src="./assets/img/Team/2020/Palaparthi Satwika.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Palaparthi Satwika</h4>
+						<h4 class="card-title">Satwika</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/satwika.palaparthi/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -2007,7 +2007,7 @@
 						<img class="img" src="./assets/img/Team/2020/Bhuvanagiri Udaya Bhaskar.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Bhuvanagiri Udaya Bhaskar</h4>
+						<h4 class="card-title">Udaya Bhaskar</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/uday.bhaskar.5680899" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
