--- a/index.html
+++ b/index.html
@@ -330,18 +330,19 @@
       </div>
   -->
   <div id="speakers" class="carousel slide" data-ride="carousel">
+  	<h2 class="title" align="center">Speakers</h2>
   	<ol class="carousel-indicators">
   		<li data-target="#speakers" data-slide-to="0" class="active"></li>
-  		<li data-target="#speakers" data-slide-to="1"></li>
+  		<!--<li data-target="#speakers" data-slide-to="1"></li>
   		<li data-target="#speakers" data-slide-to="2"></li>
   		<li data-target="#speakers" data-slide-to="3"></li>
-  		<li data-target="#speakers" data-slide-to="4"></li>
+  		<li data-target="#speakers" data-slide-to="4"></li>-->
   	</ol>
-  	<div class="carousel-inner">
+  	<div class="carousel-inner" align = "center">
   		<div class="carousel-item active">
-  			<img src="./assets/img/guests/c-k-Tiwari.jpg" alt="" style="width: 100%;">
+  			<img src="./assets/img/purvodaya/coming-soon.jpg" align="center" >
   		</div>
-
+<!--
   		<div class="carousel-item">
   			<img src="./assets/img/guests/Sangeeta-bahl.jpg" alt="" style="width: 100%;">
   		</div>
@@ -362,7 +363,7 @@
   	<a class="carousel-control-next" href="#speakers" role="button" data-slide="next">
   		<i class="material-icons">keyboard_arrow_right</i>
   		<span class="sr-only">Next</span>
-  	</a>
+  	</a>-->
   </div>
   <!-- End Carousel Card -->
 
@@ -371,8 +372,11 @@
   	<div class="container">
   		<div class="row">
   			<div class="col-md-10 ml-auto mr-auto">
-  				<h2 class="title">Events</h2>
+  				
+  				<h2 class="title" align="center">Events</h2>
+  				<h3 align = "center"><b>COMING SOON!</b></h3>
   				<br>
+  				<!--
   				<ul class="nav nav-pills nav-pills-primary" role="tablist">
   					<li class="nav-item">
   						<a class="nav-link active" data-toggle="tab" href="#entrepreneurship" role="tablist" aria-expanded="true">
@@ -683,7 +687,7 @@
   											<h3 class="card-title">
   												<a href="#pablo">A Day At IIT KHARAGPUR</a>
   											</h3>
-  											<!--	<h6 class="card-category text-info">Consulting Club</h6> 	-->
+  												<h6 class="card-category text-info">Consulting Club</h6> 	--><!--
   											<p class="card-description" align="justify">
   												Have you ever wondered what goes inside the campus of a premier B-School?<br>
   												Vinod Gupta School of Management, IIT Kharagpur was set up as the first school of management within the IIT system and is currently ranked as one of the top B-Schools in India.<br>
@@ -775,7 +779,7 @@
 
   						</div>
   					</div>
-  				</div>
+  				</div> -->
   			</div>
   			<!--     *********    END BLOGS 1      *********      -->
   		</div>
